[package]
name = "cairo-proving-server"
version = "0.1.0"
edition = "2021"

[dependencies]
cairo-verifier = { git = "https://github.com/Hyle-org/hyle" }
tokio = { version = "1.37.0", features = ["full"] }
axum = { version = "0.7.5", features = ["macros", "multipart"] }
axum-extra = { version = "0.9.3", features = ["query"] }
itertools = "0.13.0"
anyhow = "1.0.82"
fern = "0.6.2"
log = "0.4.21"
http-body-util = "0.1.1"
indoc = "2.0.5"
base64 = "0.22.1"
zip = "2.1.3"
tower-http = { version = "0.5.2", features = ["cors"] }


[[bin]]
name = "cairo-proving-server"
path = "src/main.rs"
