[package]
name = "cairo-runner"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
cairo-lang-compiler = { version = "2.6.3", default-features = false }
cairo1-run = { git = "https://github.com/lambdaclass/cairo-vm.git", rev = "e300527", default-features = false }
cairo-vm = { git = "https://github.com/lambdaclass/cairo-vm.git", rev = "e300527", default-features = false }
serde = "1.0.203"
serde_json = "1.0.111"
bincode = { version = "2.0.0-rc.3", default-features = false }
hex = "0.4.3"
wasm-bindgen = "0.2.92"
serde-wasm-bindgen = "0.6.5"
console_error_panic_hook = "0.1.7"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]

[lib]
name = "cairo_runner"
path = "src/lib.rs"
crate-type = ["cdylib"]

[[bin]]
name = "cairo-runner"
path = "src/main.rs"
